# colmap_uti

./: CMakeLists.txt  colmap.h  colmap_add_camera.cpp  colmap_export_Rt.cpp  colmap_export_features.cpp  colmap_import_Rt.cpp  colmap_import_features.cpp  colmap_import_features_batch.cpp  colmap_init_poses.cpp  colmap_modify_intrinsics.cpp  colmap_sfm.cpp  colmap_transfer_features.cpp
